niri-lua/src/snapshots/niri_lua__extractors__tests__extractors_size_parsing_edge_cases.snap
---
source: niri-lua/src/extractors.rs
expression: "(empty_result, both_result, zero_proportion_result, zero_fixed_result,)"
---
(
    None,
    Some(
        Proportion(
            0.5,
        ),
    ),
    Some(
        Proportion(
            0.0,
        ),
    ),
    Some(
        Fixed(
            0,
        ),
    ),
)
