niri-lua/src/snapshots/niri_lua__extractors__tests__extractors_size_parsing_valid.snap
---
source: niri-lua/src/extractors.rs
expression: "(proportion_result, fixed_result,)"
---
(
    Some(
        Proportion(
            0.5,
        ),
    ),
    Some(
        Fixed(
            1920,
        ),
    ),
)
