niri-lua/src/snapshots/niri_lua__extractors__tests__extractors_type_coercion_boundaries.snap
---
source: niri-lua/src/extractors.rs
expression: "(large_int, neg_int, large_float,)"
---
(
    Some(
        10000000000,
    ),
    Some(
        -123,
    ),
    Some(
        9007199254740992.0,
    ),
)
