niri-lua/src/snapshots/niri_lua__extractors__tests__parse_accel_profile_variants.snap
---
source: niri-lua/src/extractors.rs
expression: "(adaptive.is_some(), flat.is_some(), invalid.is_none(),)"
---
(
    true,
    true,
    true,
)
