niri-lua/src/snapshots/niri_lua__extractors__tests__parse_scroll_method_variants.snap
---
source: niri-lua/src/extractors.rs
expression: "(two_finger.is_some(), edge.is_some(), on_button.is_some(), none.is_some(),\ninvalid.is_none(),)"
---
(
    true,
    true,
    true,
    true,
    true,
)
